--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -3,7 +3,7 @@ production:
     hostname: localhost
     port: 8983
     log_level: WARNING
-    path: /solr/default
+    path: /solr/production
     # read_timeout: 2
     # open_timeout: 0.5
 
@@ -12,7 +12,7 @@ development:
     hostname: localhost
     port: 8982
     log_level: INFO
-    path: /solr/default
+    path: /solr/development
 
 test:
   solr:
